2 files modified, 1 added

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -1,20 +1,50 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About 
+      About Us
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>How we created TULC:</h2>
-    <p>
-     Trade To Upgrade Calculator was created using Stackblitz, an online IDE where you can create Angular & React projects that are immediately online & shareable via link. With Stackblitz, it is fairly easy to create your very own site. All we needed to use was our laptops, and our creativity.
-  </p>
+  <h2>Meet the Developers!</h2>
 
-  <h2>Guide on TULC:</h2>
-    <p>
-     TULC is very easy to use,
-  </p>
+  <ion-avatar>
+  <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Matt's%20Avatar.png">
+</ion-avatar>
 
-</ion-content>
+<ion-chip>
+  <ion-avatar>
+    <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Matt's%20Avatar.png">
+  </ion-avatar>
+  <ion-label>Matthew P. Omondang</ion-label>
+</ion-chip>
+
+<p>Matthew developed TULC's "About Us" page that you are at right now. He is an ABM student in La Salle Green Hills. He is a sporty type of guy, who usaully plays sports and exercises on his off-time. Matthew plans on studying culinary arts, and become a chef in the distant future. He aims to have a restaurant of his own, become successful, and give back the blessing his family gave him.</p>
+
+<ion-avatar>
+  <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Rafa's%20Avatar.png">
+</ion-avatar>
+
+<ion-chip>
+  <ion-avatar>
+    <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Rafa's%20Avatar.png">
+  </ion-avatar>
+  <ion-label>Raphael Maria C. Pangilinan</ion-label>
+</ion-chip>
+
+<p>Raphael developed the home page of TULC. He is a ABM student in La Salle Green Hills. He loves to play basketball, and even competes in tournaments. He aims to study business management to become a CEO of an Oil Company. He then plans to get into real estate in the distant future. He wants to be successful, so that he could thank his family for giving him a bright future.</p>
+
+<ion-avatar>
+  <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Sean's%20Avatar%202.png">
+</ion-avatar>
+
+<ion-chip>
+  <ion-avatar>
+    <img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Sean's%20Avatar%202.png">
+  </ion-avatar>
+  <ion-label>Sean Daniel Cruz</ion-label>
+</ion-chip>
+
+<p>Sean developed the calculator portion of TULC. He is a ABM student in La Salle Green Hills. He usually exercises in his own time to improve his physical and mental health. He also has a passion for cars. Sean aims to be a successful business man, where he can be a true successor of his father's business and contrinue his legacy in the family.</p>
+   
