3 files modified, 1 added

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -5,13 +5,12 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h2>Trade to Upgrade Loan Calculator</h2>
+<img src="https://cdn.jsdelivr.net/gh/MattOmon/ionic-financialapp@master/Logo%20TULC.jpg">
+ 
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    Trade to Upgrade Loan allow interested consumers to swap their old phone, which will serve as their downpayment for their dream new smartphone when they apply for a loan.  
   </p>
   <p>
-    Take a look at the <code>pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
-</ion-content>
+   The value of your old phone will be assessed based on its current condition. 
+ </p>
